--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --watch src src/server.js",
-    "test": "mocha --timeout 10000"
+    "start": "node ./src/app.js",
+    "dev": "node --watch ./src/app.js",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
@@ -13,16 +14,22 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.1",
+    "npm": "^11.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.8.1"
   },
   "description": "",
